--- a/sites/www.thunderbird.net/includes/_enonly/release-notes.html
+++ b/sites/www.thunderbird.net/includes/_enonly/release-notes.html
@@ -22,7 +22,7 @@
       <p>
         {{ _('Check out the notes below for this version of Thunderbird. As always, you’re encouraged to
         <a href="%(feedback)s">tell us what you think</a>, or
-        <a href="%(bugzilla)s">file a bug in Bugzilla</a>.')|format(feedback='https://support.mozilla.org/questions/new/thunderbird', bugzilla='https://bugzilla.mozilla.org/') }}
+        <a href="%(bugzilla)s">file a bug in Bugzilla</a>.')|format(feedback=url('mozorg.connect.tb'), bugzilla=url('thunderbird.bugzilla.new-bug')) }}
       </p>
       <div class="release-text">
         {{ release.text|markdown|safe }}
