--- a/sites/www.thunderbird.net/includes/_enonly/release-notes.html
+++ b/sites/www.thunderbird.net/includes/_enonly/release-notes.html
@@ -21,8 +21,9 @@
       <h4>{{ _('Version {version}'|f(version=release.version)) }} | {{ _('Released {release}'|f(release=release.release_date|l10n_format_date)) }}</h4>
       <p>
         {{ _('Check out the notes below for this version of Thunderbird. As always, you’re encouraged to
-        <a href="%(feedback)s">tell us what you think</a>, or
-        <a href="%(bugzilla)s">file a bug in Bugzilla</a>.')|format(feedback=url('mozorg.connect.tb'), bugzilla=url('thunderbird.bugzilla.new-bug')) }}
+        <a href="%(feedback)s">tell us what you think</a>,
+        <a href="%(question)s">ask for help</a>, or
+        <a href="%(bugzilla)s">file a bug in Bugzilla</a>.')|format(feedback=url('mozorg.connect.tb'), question=url('support.question'), bugzilla=url('thunderbird.bugzilla.new-bug')) }}
       </p>
       <div class="release-text">
         {{ release.text|markdown|safe }}
