--- a/assets/less/new/layout.less
+++ b/assets/less/new/layout.less
@@ -96,7 +96,7 @@ header {
   position: relative;
   display: flex;
   flex-direction: column;
-  gap: 60px;
+  gap: 3rem;
   padding-inline: 1rem;
   padding-block: clamp(1rem, 5.469vw, 4.375rem); // 4.375rem~
   margin-inline: auto;
@@ -356,10 +356,29 @@ section {
 }
 
 .tagline {
+  justify-content: center;
   font-size: 6rem;
   line-height: 1;
   font-weight: bold;
   margin-bottom: 1rem;
+  text-wrap: balance;
+}
+
+.hero-text {
+  font-size: var(--font-hero);
+  font-weight: 500;
+  text-align: center;
+  line-height: 1.4;
+
+  .sub-tag {
+    font-weight: 300;
+    max-inline-size: 40rem;
+    margin: auto;
+
+    strong {
+      font-weight: 500;
+    }
+  }
 }
 
 .txt-gradient {
