--- a/assets/less/new/components/buttons.less
+++ b/assets/less/new/components/buttons.less
@@ -271,6 +271,19 @@ button:hover::after {
   background: var(--color-black) !important;
 }
 
+.btn-gradient::after {
+  content: '';
+  position: absolute;
+  background-color: transparent;
+  background-image: linear-gradient(90deg, var(--color-blue-60) 30%, var(--color-purple-60) 70%);
+  background-size: 400%;
+  background-position: center;
+  opacity: 0.9;
+  inset: 0;
+  z-index: -1;
+  transition: all .3s;
+}
+
 .btn-black-bg:hover,
 .btn-white-bg:hover,
 .btn-no-bg:hover {
@@ -338,4 +351,32 @@ button:hover::after {
   display: inline-block;
   width: 1rem;
   height: 1rem;
+}
+
+// Container for the newer donation buttons
+
+.download-buttons-container {
+  margin-top: 5rem;
+  margin-bottom: 4rem;
+}
+
+// TODO: need to clean the old ones
+.download-button-products {
+  --txt: var(--color-white);
+}
+
+.download-button-page, .download-button-products {
+  display: flex;
+  gap: 2rem;
+  justify-content: center;
+  align-items: center;
+  color: var(--txt);
+  text-align: center;
+  margin-bottom: 1rem;
+}
+
+@media (max-width: @lg) {
+  .download-button-page {
+    flex-direction: column;
+  }
 }
