Additional updates + add assets to desktop page

--- a/assets/less/new/layout.less
+++ b/assets/less/new/layout.less
@@ -35,6 +35,11 @@ body {
   width: 100%;
   line-height: 0;
   color: var(--bg);
+
+  :first-child {
+    position: absolute;
+    top: 0;
+  }
 }
 
 .page-separator {
