--- a/assets/less/new/layout.less
+++ b/assets/less/new/layout.less
@@ -565,7 +565,7 @@ section {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   gap: 2rem;
   width: 100%;
   font-weight: 400;
