Enlarge the section cover images by 200% on mobile

--- a/assets/less/new/components/buttons.less
+++ b/assets/less/new/components/buttons.less
@@ -376,7 +376,7 @@ button:hover::after {
 }
 
 @media (max-width: @lg) {
-  .download-button-page {
+  .download-button-page, .download-button-products {
     flex-direction: column;
   }
 }
