Add floating phone on homepage

--- a/assets/less/new/layout.less
+++ b/assets/less/new/layout.less
@@ -469,6 +469,19 @@ section {
   border-radius: 4px;
 }
 
+.devices-container {
+  position: relative;
+  display: flex;
+
+  .TfA-overlay {
+    width: 20%;
+    position: absolute;
+    top: 13%;
+    right: 3%;
+    filter: drop-shadow(0 4px 4px var(--color-gray-60));
+  }
+}
+
 .fill-current {
   display: none;
 }
