Fix split-text not centering on pages other than downloads, and add mobile cover text.

--- a/assets/less/new/layout.less
+++ b/assets/less/new/layout.less
@@ -498,6 +498,7 @@ section {
 .split-text {
   display: flex;
   align-items: center;
+  justify-content: center;
   flex-wrap: wrap;
   @media (max-width: @lg) {
     justify-content: center;
