--- a/assets/less/new/sizing.less
+++ b/assets/less/new/sizing.less
@@ -47,16 +47,19 @@
   font-size: var(--font-h2);
   font-weight: 800;
   margin-bottom: 0;
+  text-wrap: balance;
 }
 
 .section-text :where(h3) {
   font-size: var(--font-h3);
   font-weight: 600;
   margin-bottom: 0;
+  text-wrap: balance;
 }
 
 .section-text :where(h4) {
   font-size: var(--font-h4);
   font-weight: 300;
   margin: 0 0 1em;
+  text-wrap: balance;
 }
