--- a/assets/less/pages/participate.less
+++ b/assets/less/pages/participate.less
@@ -20,21 +20,18 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     gap: 2rem;
     width: 100%;
     margin-bottom: 5rem;
 
     div:first-child {
-      margin-left: 5rem;
-
       @media (max-width: @lg) {
         margin: 0;
       }
     }
 
     div:nth-child(2) {
-      margin-right: 5rem;
       @media (max-width: @lg) {
         margin: 0;
       }
@@ -43,6 +40,10 @@
     .section-text {
       text-align: left;
       max-width: 500px;
+    }
+
+    .styled-list {
+      text-indent: -2.5rem;
     }
 
     @media (max-width: @lg) {
