Adjust the android svg to use currentColor, and center icons

--- a/assets/less/new/layout.less
+++ b/assets/less/new/layout.less
@@ -272,19 +272,17 @@ h1, h2 {
 }
 
 .icon {
-  display: inline-block;
   height: 32px;
   width: 32px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .icon-apple {
   position: relative;
   top: -2px;
-}
-
-.icon-android {
-  position: relative;
-  top: -4px;
 }
 
 .icon .icon-linux-fg {
