Adjust participate item margins, homepage phone dropshadow, and hide android announcement link

--- a/assets/less/pages/participate.less
+++ b/assets/less/pages/participate.less
@@ -26,12 +26,14 @@
     margin-bottom: 5rem;
 
     div:first-child {
+      margin-left: 2rem;
       @media (max-width: @lg) {
         margin: 0;
       }
     }
 
     div:nth-child(2) {
+      margin-right: 2rem;
       @media (max-width: @lg) {
         margin: 0;
       }
