--- a/sites/www.thunderbird.net/includes/download-button.html
+++ b/sites/www.thunderbird.net/includes/download-button.html
@@ -33,7 +33,7 @@
   {# All downloads link #}
   <div class="all-downloads-link">
     <a href="{{ url('thunderbird.latest.all') }}" class="small-link dotted">
-    <div class="os-list" aria-label="{{ _('Available on Windows, Linux, Mac') }}">
+    <div class="os-list" aria-label="{{ _('Available on Windows, Linux, Mac, and Android.') }}">
       <span class="icon" aria-hidden="true">
         {{ svg('download-icon-windows') }}
       </span>
