--- a/assets/less/pages/products.less
+++ b/assets/less/pages/products.less
@@ -71,12 +71,8 @@
     }
   }
 
-  .all-downloads-link {
-    margin-bottom: 3rem;
-  }
-
   .hero-download {
-    margin-top: 0;
+    margin-top: 3rem;
   }
 
   // Override logo colours
