--- a/sites/www.thunderbird.net/includes/macros/download-mobile.html
+++ b/sites/www.thunderbird.net/includes/macros/download-mobile.html
@@ -1,5 +1,5 @@
 {% macro download_mobile_btns(btn_class_name = 'btn-white-bg', container_class_name = 'download-button-page', show_donate_footer = False) -%}
-<div class="download-buttons-container">
+<div>
   <div class="download-button {{ container_class_name }}">
   <a
     id="download-gplay-btn"
