--- a/sites/www.thunderbird.net/includes/macros/download-block.html
+++ b/sites/www.thunderbird.net/includes/macros/download-block.html
@@ -1,5 +1,5 @@
-{% from 'includes/macros/download-mobile.html' import download_mobile_btns with context %}
-{% macro download_block(show_mobile_download=False) -%}
+{% from 'includes/macros/download-smart.html' import download_smart with context %}
+{% macro download_block(force_platform='all') -%}
 <section id="free-your-inbox">
   <div class="container">
     <div class="section-text cta-section">
@@ -7,13 +7,7 @@
       <h4 class="cta-sub-heading">{{ _('Are you ready to love email again?') }}</h4>
     </div>
     <div class="cta">
-      {% if show_mobile_download %}
-      {{ download_mobile_btns('btn-white-bg', 'download-button-page', True) }}
-      {% else %}
-      <div class="download-button">
-        {{ download_thunderbird(force_direct=true, alt_copy=_('Download'), section="homepage-bottom",  button_class="btn-download btn-white-bg") }}
-      </div>
-      {% endif %}
+      {{ download_smart('btn-white-bg', 'download-button-page', force_platform) }}
     </div>
   </div>
 </section>
