--- a/sites/www.thunderbird.net/includes/macros/download-mobile.html
+++ b/sites/www.thunderbird.net/includes/macros/download-mobile.html
@@ -1,3 +1,4 @@
+{# Internal macro, use download-block or download-smart instead! #}
 {% macro download_mobile_btns(btn_class_name = 'btn-white-bg', container_class_name = 'download-button-page', show_donate_footer = False) -%}
 <div>
   <div class="download-button {{ container_class_name }}">
