Updated assets, and fixed some mobile issues

--- a/assets/less/new/components/buttons.less
+++ b/assets/less/new/components/buttons.less
@@ -338,8 +338,10 @@ button:hover::after {
 }
 
 // Slimmer for the download page
-// TODO: Can we just remove .download-link and use this instead?
 .btn-slim {
+  display: flex;
+  gap: 0.5rem;
+  justify-content: center;
   font-size: var(--font-md)  !important;
   min-width: 8.0rem;
   padding: 0.5rem 1rem;
