Limit the length of the popout navs

--- a/assets/less/new/components/site-nav.less
+++ b/assets/less/new/components/site-nav.less
@@ -188,6 +188,7 @@
       right: var(--popover-right-align);
       translate: var(--popover-left-align);
       width: 100%;
+      max-width: 30rem;
 
       // Actual physical panel
       .popover-panel {
