--- a/sites/www.thunderbird.net/includes/macros/download-block.html
+++ b/sites/www.thunderbird.net/includes/macros/download-block.html
@@ -4,7 +4,7 @@ Macros:
   download_block
     :force_platform = 'all'|'desktop'|'android'
 #}
-{% from 'includes/macros/download-smart.html' import download_smart with context %}
+{% from 'includes/macros/download-smart.html' import download_smart %}
 {% macro download_block(force_platform='all') -%}
 <section id="free-your-inbox">
   <div class="container">
