Add the option to hide download options & donate footer on the download-smart macro

--- a/sites/www.thunderbird.net/includes/macros/download-block.html
+++ b/sites/www.thunderbird.net/includes/macros/download-block.html
@@ -2,7 +2,7 @@
 
 Macros:
   download_block
-    :force_platform = 'all'|'desktop'|'android'
+    :param force_platform: = 'all'|'desktop'|'android'
 #}
 {% from 'includes/macros/download-smart.html' import download_smart %}
 {% macro download_block(force_platform='all') -%}
