Fix mobile help link in nav

--- a/sites/www.thunderbird.net/includes/base/nav.html
+++ b/sites/www.thunderbird.net/includes/base/nav.html
@@ -37,7 +37,7 @@
       <ul class="popover-panel">
         {{ nav_entry(svg('base/icons/menu/blog'), _('Blog'), _('Learn about new product releases, community events, tech tips, and more.'), url('blog')) }}
         {{ nav_entry(svg('base/icons/menu/desktop-help'), _('Desktop Help'), _('Find the help you need configuring and using Thunderbird Desktop.'), url('support')) }}
-        {{ nav_entry(svg('base/icons/menu/mobile-help'), _('Mobile Help'), _('Find the help you need configuring and using Thunderbird Mobile.'), url('support')) }}
+        {{ nav_entry(svg('base/icons/menu/mobile-help'), _('Mobile Help'), _('Find the help you need configuring and using Thunderbird Mobile.'), url('support.mobile')) }}
       </ul>
     </div>
   </li>
