Extend the list of unsupported devices for the smart download button

--- a/assets/less/new/components/buttons.less
+++ b/assets/less/new/components/buttons.less
@@ -422,7 +422,13 @@ button:hover::after {
 }
 
 // This is only for no-js, and unrecognized devices
-.no-js, .other {
+.no-js,
+.other,
+.ios,
+.chromsos,
+.oldwin,
+.oldmac,
+.fxos {
   [data-download-platform="other"] {
     display: block !important;
   }
