--- a/assets/less/appeals/nov24.less
+++ b/assets/less/appeals/nov24.less
@@ -20,6 +20,7 @@
     font-size: 5.75rem;
     font-weight: 600;
   }
+
   h1 > span {
     display: block;
     font-size: 2.0rem;
@@ -52,10 +53,12 @@
     background-color: var(--bg);
     border-radius: 0.625rem;
     margin-bottom: 0;
+    padding: 2.0rem 2.5rem;
 
     p {
       max-inline-size: 90%;
     }
+
     b {
       font-weight: 700;
     }
@@ -63,13 +66,70 @@
 
   #timeline {
     .container {
-      justify-content: center;
+      align-items: center;
+      gap: 0;
     }
   }
+
+  .timeline-connector {
+    position: relative;
+    width: 4.0rem;
+    height: 1.0rem;
+
+    svg {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+    }
+  }
+
   .timeline-line {
+    position: absolute;
     content: ' ';
+    z-index: -1;
     width: 0.375rem;
-    height: 76.875rem;
+    height: 100rem;
     background-color: var(--bg);
+  }
+
+  .feature {
+    display: flex;
+    flex-direction: column;
+    gap: 4rem;
+
+    .timeline-blip {
+      display: flex;
+      justify-content: center;
+
+      h3 {
+        --txt: #FEFFFF;
+        color: var(--txt);
+        font-family: 'Metropolis', sans-serif;
+        font-weight: 900;
+        font-size: 2.0rem;
+        line-height: 2.0rem;
+        margin: 0;
+        display: block;
+      }
+
+      .blip {
+        position: relative;
+        display: block;
+        content: ' ';
+        background-color: #1373D9;
+        border: 0.375rem solid var(--bg);
+        border-radius: 100%;
+        width: 1rem;
+        height: 1rem;
+      }
+    }
+
+    .screenshot > img {
+      width: 20.0rem;
+      height: 20.0rem;
+      border: 4px solid var(--primary-container, #1373D9);
+      border-radius: 0.5625rem;
+    }
   }
 }
