Fix a couple of copy issues

--- a/assets/less/new/layout.less
+++ b/assets/less/new/layout.less
@@ -494,14 +494,7 @@ section {
 }
 
 .split-text {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  @media (max-width: @lg) {
-    justify-content: center;
-    margin-bottom: 0.5rem;
-  }
+  text-align: center;
 }
 
 .section-title {
@@ -548,7 +541,8 @@ section {
     margin-right: auto;
 
     @media (max-width: @lg) {
-      margin: 0;
+      margin-left: 0;
+      margin-right: 0;
     }
   }
 
@@ -557,7 +551,8 @@ section {
     margin-right: auto;
 
     @media (max-width: @lg) {
-      margin: 0;
+      margin-left: 0;
+      margin-right: 0;
     }
   }
 
