--- a/assets/less/pages/download.less
+++ b/assets/less/pages/download.less
@@ -122,13 +122,14 @@
   }
 
   .split-text {
-    justify-content: flex-start;
+    text-align: left;
   }
 
-
   .new-badge {
+    position: relative;
+    top: -0.35rem;
     display: inline-block;
-    margin-left: 1rem;
+    margin-left: 0.5rem;
     text-align: center;
     border-radius: 0.2rem;
     font-weight: 600;
